fix(button): button text should be center aligned

--- a/src/components/UI/Button/Button.scss
+++ b/src/components/UI/Button/Button.scss
@@ -12,6 +12,7 @@
   cursor: pointer;
   display: flex;
   align-items: center;
+  justify-content: center;
 
   &.small {
     font-size: 10px;
